# Zephyr-RTOS-Project

./: .gitignore  README.md
STM32_Zephyr_RTOS_Data_Logger/: CMakeLists.txt  prj.conf
STM32_Zephyr_RTOS_Data_Logger/boards/: nucleo_f446re.overlay
STM32_Zephyr_RTOS_Data_Logger/include/: app_init.h  common.h  logger_task.h  rtc.h  sensor_task.h  temperature_sensor.h  workqueue_handler.h
STM32_Zephyr_RTOS_Data_Logger/src/: app_init.c  logger_task.c  main.c  rtc.c  sensor_task.c  temperature_sensor.c  workqueue_handler.c
